manifests/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
  labels:
    app.kubernetes.io/name: rook-ceph
    app.kubernetes.io/part-of: cubeve
